--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mantinex/mantine-logo": "^1.0.1",
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.6.0",
+    "bcrypt": "^5.1.1",
     "encoding": "^0.1.13",
     "firebase": "^11.0.2",
     "next": "15.0.1",
@@ -42,6 +43,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/eslint-plugin-jsx-a11y": "^6",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.8",
