--- a/.github/workflows/npm_test.yml
+++ b/.github/workflows/npm_test.yml
@@ -20,7 +20,7 @@ jobs:
           cache: 'yarn'
           cache-dependency-path: '**/yarn.lock'
       - name: Install dependencies
-        run: npm ci
+        run: npm install
         env:
           YARN_ENABLE_HARDENED_MODE: false
       - name: Run build
