--- a/.github/workflows/npm_test.yml
+++ b/.github/workflows/npm_test.yml
@@ -1,31 +1,29 @@
-name: Node.js CI
+name: npm test
 
 on:
-  push:
   pull_request:
+    branches:
+      - '**'
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number || github.sha }}
+  cancel-in-progress: true
 
 jobs:
-  build:
+  test_pull_request:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16'
-
-      - name: Cache Node.js modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
+          node-version-file: '.nvmrc'
+          cache: 'yarn'
+          cache-dependency-path: '**/yarn.lock'
       - name: Install dependencies
-        run: npm ci
-
+        run: npm install
+        env:
+          YARN_ENABLE_HARDENED_MODE: false
+      - name: Run build
+        run: npm run build
       - name: Run tests
         run: npm test
