--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "bcrypt": "^5.1.1",
     "encoding": "^0.1.13",
     "firebase": "^11.0.2",
+    "marked": "^15.0.3",
     "next": "15.0.1",
+    "openai": "^4.76.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "zod": "^3.23.8"
