--- a/.github/workflows/npm_test.yml
+++ b/.github/workflows/npm_test.yml
@@ -33,7 +33,7 @@ jobs:
           NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
           NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
           NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
-      - name: Run Tests (Skipping Prettier)
+      - name: Run Tests
         run: npm run test
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
