--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/core": "^7.24.7",
     "@eslint/js": "^9.15.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@playwright/test": "^1.50.1",
     "@storybook/nextjs": "^8.1.10",
     "@storybook/react": "^8.1.10",
     "@testing-library/dom": "^10.1.0",
