--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
     "test": "npm run prettier:check && npm run lint && npm run typecheck && npm run jest",
+    "autotest": "npx playwright test tests/",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
   },
