Add item automation test

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.6.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "encoding": "^0.1.13",
     "firebase": "^11.0.2",
     "marked": "^15.0.3",
