--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.7",
     "encoding": "^0.1.13",
     "firebase": "^11.0.2",
+    "mailgun.js": "^12.0.1",
     "marked": "^15.0.3",
     "next": "15.0.1",
     "openai": "^4.76.2",
