--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mantine/hooks": "7.14.1",
     "@mantinex/mantine-logo": "^1.0.1",
     "@next/bundle-analyzer": "^14.2.4",
+    "@react-pdf/renderer": "^4.3.0",
     "@tabler/icons-react": "^3.6.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
@@ -35,6 +36,7 @@
     "openai": "^4.76.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "recharts": "^2.15.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
