--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "openai": "^4.76.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "^7.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
