--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typecheck": "tsc --noEmit",
     "lint": "npm run eslint && npm run stylelint",
     "eslint": "next lint",
-    "stylelint": "stylelint '**/*.css' --cache",
+    "stylelint": "stylelint \"{app,components}/**/*.css\" --cache",
     "jest": "jest",
     "jest:watch": "jest --watch",
     "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
