--- a/.github/workflows/npm_test.yml
+++ b/.github/workflows/npm_test.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Create NPM cache directory
+        run: mkdir -p ~/.npm
+
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
