--- a/.github/workflows/npm_test.yml
+++ b/.github/workflows/npm_test.yml
@@ -15,6 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install Yarn
+        run: npm install -g yarn
+
+      - name: Fix Yarn Registry
+        run: yarn config set registry https://registry.yarnpkg.com
+
       - name: Create NPM cache directory
         run: mkdir -p ~/.npm
 
