- npm run test and prettier changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,12 @@
     },
     "plugins": [{ "name": "next" }]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/_utils/auth-context.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/_utils/auth-context.tsx"
+  ],
   "exclude": ["node_modules"]
 }
